<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/time" />

    <TextView
        android:id="@+id/when_receive_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/when_to_receive_notification"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/set_hour"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_below="@+id/when_receive_notification"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/set_hour" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/every_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:checked="false"
        android:text="@string/everyday"
        android:theme="@style/CheckBox" />

</RelativeLayout>