<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/degrees" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="80dp">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/use_celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#fff"
            android:text="@string/celsius"
            android:textColor="#fff"
            android:textSize="22sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/use_fahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#fff"
            android:text="@string/fahrenheit"
            android:textColor="#fff"
            android:textSize="22sp" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="220dp"
        android:gravity="center"
        android:text="@string/next" />

</RelativeLayout>