<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/location" />

    <TextView
        android:id="@+id/you_live_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:gravity="center"
        android:text="@string/you_live_in"
        android:textColor="@android:color/white"
        android:textSize="35sp" />

    <me.grantland.widget.AutofitTextView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/you_live_in"
        android:layout_centerHorizontal="true"
        android:ellipsize="none"
        android:gravity="center"
        android:maxLines="2"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:singleLine="false"
        android:text="\???"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        app:minTextSize="14dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/right"
        android:textColor="@android:color/white"
        android:textSize="35sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/not_my_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/not_my_city"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:foreground="?attr/selectableItemBackground" />

</RelativeLayout>